# highload-mai

./: CMakeLists.txt  components.md  context.md  docker-compose.yml  init-database.sql  task.md
api/: auth-service-api.yml  blog-service-api.yml  messenger-service-api.yml  user-service-api.yml  web-service-api.yml
database/: blog-post.cpp  blog-post.h  chat-message.cpp  chat-message.h  database.cpp  database.h  user-auth.cpp  user-auth.h  user.cpp  user.h
database/chat/: chat.cpp  chat.h
database/database-config/: database-config.cpp  database-config.h
database/message/: message.cpp  message.h
database/post/: post.cpp  post.h
database/user/: user.cpp  user.h
proxysql/: proxysql.cnf
services/auth-service/: Dockerfile  auth-handler.h  http-auth-request-factory.h  http-auth-service.h  main.cpp
services/auth-service/auth-config/: auth-config.cpp  auth-config.h
services/blog-service/: Dockerfile  blog-handler.h  http-blog-request-factory.h  http-blog-service.h  main.cpp
services/blog-service/blog-config/: blog-config.cpp  blog-config.h
services/messanger-service/: Dockerfile  http-messanger-request-factory.h  http-messanger-service.h  main.cpp  messanger-handler.h
services/messanger-service/messanger-config/: messanger-config.cpp  messanger-config.h
services/user-service/: Dockerfile  http-user-request-factory.h  http-user-service.h  main.cpp  user-handler.h
services/user-service/user-config/: user-config.cpp  user-config.h
utils/: get-identity.h
